--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <div class="heart"></div>
             <footer>
                 <div class="boton">
-                    <button><a href=https://edwinguty2.github.io/flores_2/"><span>Preciona Budito</span></a></button>
+                    <button><a href="https://edwinguty2.github.io/flores_2/"><span>Preciona Budito</span></a></button>
                 </div>
             </footer>
         </div>
